menu hidden bc ulgy

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
 
         <section id="mid">
-            <nav id="cute-menu">
+            <!-- <nav id="cute-menu">
                 <ul>
                     <li id="abt-me">
                         <a href="#about-me">About me</a>
@@ -41,7 +41,7 @@
                         <a href="#penelope">Yippie</a>
                     </li>
                 </ul>
-            </nav>
+            </nav> -->
 
             <div id="content">
                 <h3>Hi it's me again</h3>
